api-reference/v2/versioning.mdx
---
title: Versioning
description: How Heyy versions its public API and deprecates older versions.
---

The Heyy API is versioned in the request path, following semantic versioning principles.

### Versioning model

- We use **major** and **minor** versions (for example, `v1`, `v2`).
- Major versions are encoded in the base path of the API:

```bash
GET https://api.heyy.io/v1/...
GET https://api.heyy.io/v2/...
```

### Current version

The current latest version of the Heyy API is **v3**. See the [API v3 reference](/api-reference/v3/overview).

**v2** is deprecated and will be **sunset on November 1, 2026**.

### Deprecation policy

When we release a new major version:

- The previous major version (for example, **v1.x** when **v2.x** is current) remains **available and supported for up to 3 months**.
- We will clearly communicate deprecation timelines and the exact sunset date in advance.

This window is intended to give you enough time to:

- Test your integration against the new version.
- Roll out changes safely across your environments.

If you need help planning or executing a migration between versions, please contact our support team and we’ll be happy to assist.

